--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>my_pf</name>
+  <name>comp_robo_project2</name>
   <version>0.0.0</version>
-  <description>The my_pf package</description>
+  <description>The comp_robo_project2 package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
